crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@config_rule_item_start.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/config_rule_item_start.v
---
lex: Code
prefix: "de"
replacement: 33..35
in_decl_name: false
expectations:
  Keyword(ConfigRule)
