crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@decl_name_tf_port_list_multiline.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/decl_name_tf_port_list_multiline.v
---
lex: Code
prefix: ""
replacement: 32..32
in_decl_name: true
expectations:
  DeclName
