crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@else_clause_after_if_block.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/else_clause_after_if_block.v
---
lex: Code
prefix: "el"
replacement: 50..52
in_decl_name: false
expectations:
  Keyword(Statement)
  Expression
  ElseClause
