crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@eof_identifier_replacement.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/eof_identifier_replacement.v
---
lex: Code
prefix: "mo"
replacement: 0..2
in_decl_name: false
expectations:
  Keyword(CompilationUnitMember)
