crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@function_port_keyword_prefix.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/function_port_keyword_prefix.v
---
lex: Code
prefix: "in"
replacement: 17..19
in_decl_name: true
expectations:
  FunctionPortItem
