crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@function_port_list_newline_trigger.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/function_port_list_newline_trigger.v
---
lex: Code
prefix: ""
replacement: 20..20
in_decl_name: false
expectations:
  FunctionPortItem
